v2.2.1/_sources/plugins/allowed_protocols_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.allowed_protocols_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.allowed_protocols_info module -- Information module for Allowed Protocols
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.2.1).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.allowed_protocols_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Allowed Protocols.
- Get Allowed Protocols by id.
- Get Allowed Protocols by name.
- This API allows the client to get all the allowed protocols.
- This API allows the client to get an allowed protocol by ID.
- This API allows the client to get an allowed protocol by name.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk >= 1.4.0
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise_hostname}}.

      If it is false, it sends the requests to https://{{ise_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-name"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Name path parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-page"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-page:

      .. rst-class:: ansible-option-title

      **page**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-page" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Page query parameter. Page number.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-size"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__parameter-size:

      .. rst-class:: ansible-option-title

      **size**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-size" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Size query parameter. Number of objects returned per page.


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are allowed_protocols.AllowedProtocols.get_allowed_protocol_by_id, allowed_protocols.AllowedProtocols.get_allowed_protocol_by_name, allowed_protocols.AllowedProtocols.get_allowed_protocols_generator,
   - Paths used are get /ers/config/allowedprotocols, get /ers/config/allowedprotocols/name/{name}, get /ers/config/allowedprotocols/{id},
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Allowed Protocols
      cisco.ise.allowed_protocols_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        page: 1
        size: 20
      register: result

    - name: Get Allowed Protocols by id
      cisco.ise.allowed_protocols_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        id: string
      register: result

    - name: Get Allowed Protocols by name
      cisco.ise.allowed_protocols_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        name: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"id\\": \\"string\\",\\n  \\"name\\": \\"string\\",\\n  \\"description\\": \\"string\\",\\n  \\"eapTls\\": {\\n    \\"allowEapTlsAuthOfExpiredCerts\\": true,\\n    \\"eapTlsEnableStatelessSessionResume\\": true,\\n    \\"eapTlsSessionTicketTtl\\": 0,\\n    \\"eapTlsSessionTicketTtlUnits\\": \\"string\\",\\n    \\"eapTlsSessionTicketPrecentage\\": 0\\n  },\\n  \\"peap\\": {\\n    \\"allowPeapEapMsChapV2\\": true,\\n    \\"allowPeapEapMsChapV2PwdChange\\": true,\\n    \\"allowPeapEapMsChapV2PwdChangeRetries\\": 0,\\n    \\"allowPeapEapGtc\\": true,\\n    \\"allowPeapEapGtcPwdChange\\": true,\\n    \\"allowPeapEapGtcPwdChangeRetries\\": 0,\\n    \\"allowPeapEapTls\\": true,\\n    \\"allowPeapEapTlsAuthOfExpiredCerts\\": true,\\n    \\"requireCryptobinding\\": true,\\n    \\"allowPeapV0\\": true\\n  },\\n  \\"eapFast\\": {\\n    \\"allowEapFastEapMsChapV2\\": true,\\n    \\"allowEapFastEapMsChapV2PwdChange\\": true,\\n    \\"allowEapFastEapMsChapV2PwdChangeRetries\\": 0,\\n    \\"allowEapFastEapGtc\\": true,\\n    \\"allowEapFastEapGtcPwdChange\\": true,\\n    \\"allowEapFastEapGtcPwdChangeRetries\\": 0,\\n    \\"allowEapFastEapTls\\": true,\\n    \\"allowEapFastEapTlsAuthOfExpiredCerts\\": true,\\n    \\"eapFastUsePacs\\": true,\\n    \\"eapFastUsePacsTunnelPacTtl\\": 0,\\n    \\"eapFastUsePacsTunnelPacTtlUnits\\": \\"string\\",\\n    \\"eapFastUsePacsUseProactivePacUpdatePrecentage\\": 0,\\n    \\"eapFastUsePacsAllowAnonymProvisioning\\": true,\\n    \\"eapFastUsePacsAllowAuthenProvisioning\\": true,\\n    \\"eapFastUsePacsReturnAccessAcceptAfterAuthenticatedProvisioning\\": true,\\n    \\"eapFastUsePacsAcceptClientCert\\": true,\\n    \\"eapFastUsePacsMachinePacTtl\\": 0,\\n    \\"eapFastUsePacsMachinePacTtlUnits\\": \\"string\\",\\n    \\"eapFastUsePacsAllowMachineAuthentication\\": true,\\n    \\"eapFastUsePacsStatelessSessionResume\\": true,\\n    \\"eapFastUsePacsAuthorizationPacTtl\\": 0,\\n    \\"eapFastUsePacsAuthorizationPacTtlUnits\\": \\"string\\",\\n    \\"eapFastDontUsePacsAcceptClientCert\\": true,\\n    \\"eapFastDontUsePacsAllowMachineAuthentication\\": true,\\n    \\"eapFastEnableEAPChaining\\": true\\n  },\\n  \\"eapTtls\\": {\\n    \\"eapTtlsPapAscii\\": true,\\n    \\"eapTtlsChap\\": true,\\n    \\"eapTtlsMsChapV1\\": true,\\n    \\"eapTtlsMsChapV2\\": true,\\n    \\"eapTtlsEapMd5\\": true,\\n    \\"eapTtlsEapMsChapV2\\": true,\\n    \\"eapTtlsEapMsChapV2PwdChange\\": true,\\n    \\"eapTtlsEapMsChapV2PwdChangeRetries\\": 0\\n  },\\n  \\"teap\\": {\\n    \\"allowTeapEapMsChapV2\\": true,\\n    \\"allowTeapEapMsChapV2PwdChange\\": true,\\n    \\"allowTeapEapMsChapV2PwdChangeRetries\\": 0,\\n    \\"allowTeapEapTls\\": true,\\n    \\"allowTeapEapTlsAuthOfExpiredCerts\\": true,\\n    \\"acceptClientCertDuringTunnelEst\\": true,\\n    \\"enableEapChaining\\": true,\\n    \\"allowDowngradeMsk\\": true\\n  },\\n  \\"processHostLookup\\": true,\\n  \\"allowPapAscii\\": true,\\n  \\"allowChap\\": true,\\n  \\"allowMsChapV1\\": true,\\n  \\"allowMsChapV2\\": true,\\n  \\"allowEapMd5\\": true,\\n  \\"allowLeap\\": true,\\n  \\"allowEapTls\\": true,\\n  \\"allowEapTtls\\": true,\\n  \\"allowEapFast\\": true,\\n  \\"allowPeap\\": true,\\n  \\"allowTeap\\": true,\\n  \\"allowPreferredEapProtocol\\": true,\\n  \\"preferredEapProtocol\\": \\"string\\",\\n  \\"eapTlsLBit\\": true,\\n  \\"allowWeakCiphersForEap\\": true,\\n  \\"requireMessageAuth\\": true,\\n  \\"link\\": {\\n    \\"rel\\": \\"string\\",\\n    \\"href\\": \\"string\\",\\n    \\"type\\": \\"string\\"\\n  }\\n}\\n"


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_responses"></div>

      .. _ansible_collections.cisco.ise.allowed_protocols_info_module__return-ise_responses:

      .. rst-class:: ansible-option-title

      **ise_responses**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_responses" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "[\\n  {\\n    \\"id\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"description\\": \\"string\\",\\n    \\"eapTls\\": {\\n      \\"allowEapTlsAuthOfExpiredCerts\\": true,\\n      \\"eapTlsEnableStatelessSessionResume\\": true,\\n      \\"eapTlsSessionTicketTtl\\": 0,\\n      \\"eapTlsSessionTicketTtlUnits\\": \\"string\\",\\n      \\"eapTlsSessionTicketPrecentage\\": 0\\n    },\\n    \\"peap\\": {\\n      \\"allowPeapEapMsChapV2\\": true,\\n      \\"allowPeapEapMsChapV2PwdChange\\": true,\\n      \\"allowPeapEapMsChapV2PwdChangeRetries\\": 0,\\n      \\"allowPeapEapGtc\\": true,\\n      \\"allowPeapEapGtcPwdChange\\": true,\\n      \\"allowPeapEapGtcPwdChangeRetries\\": 0,\\n      \\"allowPeapEapTls\\": true,\\n      \\"allowPeapEapTlsAuthOfExpiredCerts\\": true,\\n      \\"requireCryptobinding\\": true,\\n      \\"allowPeapV0\\": true\\n    },\\n    \\"eapFast\\": {\\n      \\"allowEapFastEapMsChapV2\\": true,\\n      \\"allowEapFastEapMsChapV2PwdChange\\": true,\\n      \\"allowEapFastEapMsChapV2PwdChangeRetries\\": 0,\\n      \\"allowEapFastEapGtc\\": true,\\n      \\"allowEapFastEapGtcPwdChange\\": true,\\n      \\"allowEapFastEapGtcPwdChangeRetries\\": 0,\\n      \\"allowEapFastEapTls\\": true,\\n      \\"allowEapFastEapTlsAuthOfExpiredCerts\\": true,\\n      \\"eapFastUsePacs\\": true,\\n      \\"eapFastUsePacsTunnelPacTtl\\": 0,\\n      \\"eapFastUsePacsTunnelPacTtlUnits\\": \\"string\\",\\n      \\"eapFastUsePacsUseProactivePacUpdatePrecentage\\": 0,\\n      \\"eapFastUsePacsAllowAnonymProvisioning\\": true,\\n      \\"eapFastUsePacsAllowAuthenProvisioning\\": true,\\n      \\"eapFastUsePacsReturnAccessAcceptAfterAuthenticatedProvisioning\\": true,\\n      \\"eapFastUsePacsAcceptClientCert\\": true,\\n      \\"eapFastUsePacsMachinePacTtl\\": 0,\\n      \\"eapFastUsePacsMachinePacTtlUnits\\": \\"string\\",\\n      \\"eapFastUsePacsAllowMachineAuthentication\\": true,\\n      \\"eapFastUsePacsStatelessSessionResume\\": true,\\n      \\"eapFastUsePacsAuthorizationPacTtl\\": 0,\\n      \\"eapFastUsePacsAuthorizationPacTtlUnits\\": \\"string\\",\\n      \\"eapFastDontUsePacsAcceptClientCert\\": true,\\n      \\"eapFastDontUsePacsAllowMachineAuthentication\\": true,\\n      \\"eapFastEnableEAPChaining\\": true\\n    },\\n    \\"eapTtls\\": {\\n      \\"eapTtlsPapAscii\\": true,\\n      \\"eapTtlsChap\\": true,\\n      \\"eapTtlsMsChapV1\\": true,\\n      \\"eapTtlsMsChapV2\\": true,\\n      \\"eapTtlsEapMd5\\": true,\\n      \\"eapTtlsEapMsChapV2\\": true,\\n      \\"eapTtlsEapMsChapV2PwdChange\\": true,\\n      \\"eapTtlsEapMsChapV2PwdChangeRetries\\": 0\\n    },\\n    \\"teap\\": {\\n      \\"allowTeapEapMsChapV2\\": true,\\n      \\"allowTeapEapMsChapV2PwdChange\\": true,\\n      \\"allowTeapEapMsChapV2PwdChangeRetries\\": 0,\\n      \\"allowTeapEapTls\\": true,\\n      \\"allowTeapEapTlsAuthOfExpiredCerts\\": true,\\n      \\"acceptClientCertDuringTunnelEst\\": true,\\n      \\"enableEapChaining\\": true,\\n      \\"allowDowngradeMsk\\": true\\n    },\\n    \\"processHostLookup\\": true,\\n    \\"allowPapAscii\\": true,\\n    \\"allowChap\\": true,\\n    \\"allowMsChapV1\\": true,\\n    \\"allowMsChapV2\\": true,\\n    \\"allowEapMd5\\": true,\\n    \\"allowLeap\\": true,\\n    \\"allowEapTls\\": true,\\n    \\"allowEapTtls\\": true,\\n    \\"allowEapFast\\": true,\\n    \\"allowPeap\\": true,\\n    \\"allowTeap\\": true,\\n    \\"allowPreferredEapProtocol\\": true,\\n    \\"preferredEapProtocol\\": \\"string\\",\\n    \\"eapTlsLBit\\": true,\\n    \\"allowWeakCiphersForEap\\": true,\\n    \\"requireMessageAuth\\": true,\\n    \\"link\\": {\\n      \\"rel\\": \\"string\\",\\n      \\"href\\": \\"string\\",\\n      \\"type\\": \\"string\\"\\n    }\\n  }\\n]\\n"


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

